# mod-downloader

./: .gitignore  Cargo.toml  LICENSE  README.md  main.py  requirements.txt  test.csv
.github/workflows/: rust.yml
src/: lib.rs  main.rs  pathways.rs  unzip.rs
src/mods/: get_mod.rs  mod.rs  mod_details.rs
