[package]
name = "sims4_modder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.14.18"
regex = "1.5.5"
reqwest = {version = "0.11.10", features = ["json", "blocking"]}
threadpool = "1.8.1"
clap = { version = "3.1.8", features = ["derive"] }
csv = "1.1.6"
serde_derive = "1.0.136"
serde = "1.0.136"
indicatif = "0.16.2"
zip-extract = "0.1.1"